--- a/src/components/Nav/style.css
+++ b/src/components/Nav/style.css
@@ -2,7 +2,7 @@
  
     margin: 0 auto;
     height:60px;
-    background:#333;
+    background:#131010;
 }
 .navigation-content{
     width: 89.5vw;
@@ -262,8 +262,17 @@
     box-sizing: border-box;
     height: 36px;
     position: relative;
-    top: 7%;
+    top: 3%;
     display: none;
+    background: #222a2e;
+    border-radius: 2px;
+    transition: 0.2s ease-in-out all;
+}
+.hamburger.show{
+    background: #f00505;
+    transition: 0.2s ease-in-out all;
+
+
 }
 .hamburger .line {
     width: 84%;
@@ -309,7 +318,7 @@
     width: 69vw;
     color: #fff;
     background: rgb(11 11 11 / 98%);
-    transform: translateX(-260px);
+    transform: translateX(-350px);
     transition: 0.2s all ease-in-out;
     display: none;
 }
