sua doi may thu

--- a/src/components/Anime/style.css
+++ b/src/components/Anime/style.css
@@ -7,6 +7,11 @@
     max-width:100%;
     margin: 0 auto;
 }
+a.anime-item {
+    height: 400px;
+    background:rgb(0, 0, 0);
+    overflow: hidden;
+}
 .anime-body{
 
 }
@@ -32,23 +37,53 @@
 
 }
 .anime-item-img{
-    height: 250px;
+    
+    height: 100%;
+    transition: all 0.2s ease-in-out;
+}
+.anime-item:hover .anime-item-img img{
+    transform: scale(1);
+    opacity:0.3;
 }
 .anime-item-img img{
     width: 100%;
     height: 100%;
     object-fit: cover;
+    transform: scale(1.2);
+    transition: all 0.2s ease-in-out;
 }
 .anime-item-name{
-    font-size: 15px;
+    font-size: 19px;
     text-align: left;
     padding-left: 3%;
-    height: 50px;
+    height:auto;
+    max-height: 55px;
+    font-weight: 600;
+    color: #fff;
     overflow: hidden;
     -webkit-line-clamp: 2;
     display: -webkit-box;
     -webkit-box-orient: vertical;
     margin-top: 2%;
+    opacity: 0;
+    transform: translateY(20px);
+    transition: all 0.3s ease-in-out;
+    text-align: center !important;
+    margin-bottom: 0;
+
+}
+.anime-item-des{
+    transition: all 0.1s ease-in-out;
+    transform: translateY(-150px);
+    /* display:none; */
+}
+.anime-item:hover .anime-item-des{
+   /* display:block */
+}
+.anime-item:hover .anime-item-name{
+    transition: all 0.3s ease-in-out;
+    transform: translateY(0);
+    opacity: 1;
 }
 .pagination{
     margin-top: 30px;
@@ -59,4 +94,56 @@
 .ant-pagination-jump-prev .ant-pagination-item-container .ant-pagination-item-ellipsis, 
 .ant-pagination-jump-next .ant-pagination-item-container .ant-pagination-item-ellipsis {
     color:#fff !important;
+}
+.emoji{
+  display:flex;
+  justify-content: center;
+  align-items: center;
+  transform:translateY(20px);
+  opacity:0;
+  transition: all 0.3s ease-in-out;
+}
+.anime-item:hover .emoji{
+    transition: all 0.3s ease-in-out;
+    transform: translateY(0);
+    opacity: 1;
+    transition-delay: 0.2s;
+}
+
+span.percent {
+  font-size: 18px;
+  margin-left: 5px;
+  color: #fff;
+}
+
+svg.w-6.h-6.text-green-300 {
+  font-size: 30px;
+  color: rgb(255, 0, 0);
+}
+.anime-item-genre{
+
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  transform:translateY(20px);
+  opacity:0;
+  transition: all 0.3s ease-in-out;
+}
+.anime-item:hover .anime-item-genre{
+    transition: all 0.3s ease-in-out;
+    transform: translateY(0);
+    opacity: 1;
+    transition-delay: 0.1s;
+}
+.anime-item-genre .dot{
+  width: 7px;
+  height: 8px;
+  display: inline-block;
+  background: #ead0d0;
+  margin: auto 6px 4px;
+  border-radius: 50%;
+  transform: translateY(-28%);
+}
+.anime-item-genre span{
+
 }
